added The Myth, The Legend, The Man

--- a/_posts/2016-03-15-daily_thought.html
+++ b/_posts/2016-03-15-daily_thought.html
@@ -26,7 +26,6 @@ is only a 1% and not a 10%, 20% or 30%. The only way that we can stop this separ
 The greed in which we are not willing to help others, the greed in which we demand more for less, the greed
 where we must receive before we give.  For the rich who read this, whom do you have to help you if you were to
 lose it all. Think about it for a bit. You’ll be surprise to find out whom you think you have. And for the poor
-who read this, do you help others as well or do you only think of yourself. <br><br>
-Besides the money that separates us from each other. Humans by nature need to change or we will always be the same.
+who read this, do you help others as well or do you only think of yourself. Besides the money that separates us from each other. Humans by nature need to change or we will always be the same.
 </p>
 </div>
