--- a/static/myth.html
+++ b/static/myth.html
@@ -12,14 +12,13 @@ tags: Family and friends
 
 <p>This is how my story started:</p>
 
-<img class="main-img" id= "flyingman" src="http://localhost:4000/images/ALI%20&%20FLYING%20MAN.jpg" alt="flying_man">
-<img class="main-img" id= "flyingman" src="http://localhost:4000/images/ali_fishing_yellowstone.jpg" alt="flyfishing_yellowstone">
-<img class="main-img" id= "sleepingman" src="http://localhost:4000/images/ali_sleeping_yellowstone.jpg" alt="sleeping_yellowstone">
-<img class="main-img" id= "flyingman" src="http://localhost:4000/images/ali_zen_in_new_mexico.jpg" alt="ali_zen_new_mexico">
-<img class="main-img"  src="http://localhost:4000/images/drunken_barrell.jpg" alt="drunken_barrel">
-<img class="main-img"  src="http://localhost:4000/images/ali_dunes_new_mexico.jpg" alt="ali_dunes_new_mexico">
-<img class="main-img"  src="http://localhost:4000/images/locked_up.jpg" alt="locked_up">
-<img class="main-img"  src="http://localhost:4000/images/estes_ali.jpg" alt="estes_ali">
-<img class="main-img"  src="http://localhost:4000/images/my_favorite_restaurant.jpg" alt="my_favorite_restaurant">
-<img class="main-img"  src="http://localhost:4000/images/fall_hike_new_mexico.jpg" alt="fall_hike_new_mexico">
-http://localhost:4000/images/ali_sleeping_yellowstone.jpg
+<img class="main-img" id= "flyingman" src="/images/ALI%20&%20FLYING%20MAN.jpg" alt="flying_man">
+<img class="main-img" id= "flyingman" src="/images/ali_fishing_yellowstone.jpg" alt="flyfishing_yellowstone">
+<img class="main-img" id= "sleepingman" src="/images/ali_sleeping_yellowstone.jpg" alt="sleeping_yellowstone">
+<img class="main-img" id= "flyingman" src="/images/ali_zen_in_new_mexico.jpg" alt="ali_zen_new_mexico">
+<img class="main-img"  src="/images/drunken_barrell.jpg" alt="drunken_barrel">
+<img class="main-img"  src="/images/ali_dunes_new_mexico.jpg" alt="ali_dunes_new_mexico">
+<img class="main-img"  src="/images/locked_up.jpg" alt="locked_up">
+<img class="main-img"  src="/images/estes_ali.jpg" alt="estes_ali">
+<img class="main-img"  src="/images/my_favorite_restaurant.jpg" alt="my_favorite_restaurant">
+<img class="main-img"  src="/images/fall_hike_new_mexico.jpg" alt="fall_hike_new_mexico">
