--- a/static/legend.html
+++ b/static/legend.html
@@ -13,15 +13,15 @@ tags: Family and friends
    cultures and solving mysteries. Thus becoming a legend and the “Most Interesting
    Man in the World” </p>
 
-<img class="main-img" id="vertical_pics" src="hhttp://alirezaandersen.github.io/images/ali_colombia.JPG" alt="ali_columbia">
-<img class="main-img" id="vertical_pics" src="http://alirezaandersen.github.io/images/diving_moab_ali.jpg" alt="diving_moab_ali">
-<img class="main-img" id="vertical_pics" src="http://alirezaandersen.github.io/images/amy_ali_arches_moab.jpg" alt="amy_ali_arches">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/puerto_rico_love.jpg" alt="Puerto_Rico_love">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/camel_rock.jpg" alt="camel_rock">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/Snow_with_amy.jpg" alt="snow_with_amy">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/riding_off_into_the_sunset.jpg" alt="riding_off_into_the_sunset">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/wall_faces.jpg" alt="wall_of_faces">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/road_to_nowhere.jpg" alt="road_to_nowhere">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/hot_air_ballon_nm.jpg" alt="hot_air_ballon_new_mexico">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/lost_in_time_moab.jpg" alt="lost_in_time_moab">
-<img class="main-img"  src="http://alirezaandersen.github.io/images/geyser.jpg" alt="geyser">
+<img class="main-img" id="vertical_pics" src="/images/ali_colombia.JPG" alt="ali_columbia">
+<img class="main-img" id="vertical_pics" src="/images/diving_moab_ali.jpg" alt="diving_moab_ali">
+<img class="main-img" id="vertical_pics" src="/images/amy_ali_arches_moab.jpg" alt="amy_ali_arches">
+<img class="main-img"  src="/images/puerto_rico_love.jpg" alt="Puerto_Rico_love">
+<img class="main-img"  src="/images/camel_rock.jpg" alt="camel_rock">
+<img class="main-img"  src="/images/Snow_with_amy.jpg" alt="snow_with_amy">
+<img class="main-img"  src="/images/riding_off_into_the_sunset.jpg" alt="riding_off_into_the_sunset">
+<img class="main-img"  src="/images/wall_faces.jpg" alt="wall_of_faces">
+<img class="main-img"  src="/images/road_to_nowhere.jpg" alt="road_to_nowhere">
+<img class="main-img"  src="/images/hot_air_ballon_nm.jpg" alt="hot_air_ballon_new_mexico">
+<img class="main-img"  src="/images/lost_in_time_moab.jpg" alt="lost_in_time_moab">
+<img class="main-img"  src="/images/geyser.jpg" alt="geyser">
