--- a/static/man.html
+++ b/static/man.html
@@ -10,20 +10,20 @@ Without them he is only a man.</p>
 
 <p>Meet <strong>"The Man"</strong> and the people that made him <strong>"The Man"</strong></p>
 
-<img class="main-img" src="http://alirezaandersen.github.io/images/ali_amy_dinner_one_year_anniversary.jpg" alt="amy_ali_one_year">
-<img class="main-img" src="http://alirezaandersen.github.io/images/Iran_family.jpg" alt="the_family">
-<img class="main-img" src="http://alirezaandersen.github.io/images/jace_chad_wedding.jpg" alt="JACE">
-<img class="main-img" src="http://alirezaandersen.github.io/images/Peyton,%20Me,%20&%20Derek.jpg" alt="Derek,Peyton,I">
-<img class="main-img" src="http://alirezaandersen.github.io/images/Peyton_andJackson.jpg" alt="Peyton, Jackson">
-<img class="main-img" src="http://alirezaandersen.github.io/images/amy_bacardi.jpg" alt="amy_bacardi">
-<img class="main-img" src="http://alirezaandersen.github.io/images/asian%20mafia.jpeg" alt="asian_mafia">
-<img class="main-img" src="http://alirezaandersen.github.io/images/siblings_In_the_tropics.jpg" alt="sibblings_in_the_tropics">
-<img class="main-img" src="http://alirezaandersen.github.io/images/ziba_puppy_play.jpg" alt="Ziba_puppy">
-<img class="main-img" src="http://alirezaandersen.github.io/images/Chads_family.jpg" alt="chad's_family">
-<img class="main-img" src="http://alirezaandersen.github.io/images/derek_wedding.jpg" alt="dereks_wedding">
-<img class="main-img" src="http://alirezaandersen.github.io/images/mom_in_estes.jpg" alt="mom_in_estes">
-<img class="main-img" src="http://alirezaandersen.github.io/images/spooky_the_king.jpg" alt="spooky">
-<img class="main-img" src="http://alirezaandersen.github.io/images/ali,amy,gina,kristine.jpg" alt="ali_amy_gina_kristine">
-<img class="main-img" src="http://alirezaandersen.github.io/images/Marley.jpg" alt="marley">
-<img class="main-img" src="http://alirezaandersen.github.io/images/Layla.JPG" alt="layla">
-<img class="main-img" src="http://alirezaandersen.github.io/images/katie.JPG" alt="katie">
+<img class="main-img" src="/images/ali_amy_dinner_one_year_anniversary.jpg" alt="amy_ali_one_year">
+<img class="main-img" src="/images/Iran_family.jpg" alt="the_family">
+<img class="main-img" src="/images/jace_chad_wedding.jpg" alt="JACE">
+<img class="main-img" src="/images/Peyton,%20Me,%20&%20Derek.jpg" alt="Derek,Peyton,I">
+<img class="main-img" src="/images/Peyton_andJackson.jpg" alt="Peyton, Jackson">
+<img class="main-img" src="/images/amy_bacardi.jpg" alt="amy_bacardi">
+<img class="main-img" src="/images/asian%20mafia.jpeg" alt="asian_mafia">
+<img class="main-img" src="/images/siblings_In_the_tropics.jpg" alt="sibblings_in_the_tropics">
+<img class="main-img" src="/images/ziba_puppy_play.jpg" alt="Ziba_puppy">
+<img class="main-img" src="/images/Chads_family.jpg" alt="chad's_family">
+<img class="main-img" src="/images/derek_wedding.jpg" alt="dereks_wedding">
+<img class="main-img" src="/images/mom_in_estes.jpg" alt="mom_in_estes">
+<img class="main-img" src="/images/spooky_the_king.jpg" alt="spooky">
+<img class="main-img" src="/images/ali,amy,gina,kristine.jpg" alt="ali_amy_gina_kristine">
+<img class="main-img" src="/images/Marley.jpg" alt="marley">
+<img class="main-img" src="/images/Layla.JPG" alt="layla">
+<img class="main-img" src="/images/katie.JPG" alt="katie">
