refactor more linksks

--- a/_posts/2016-03-14-my-dog.html
+++ b/_posts/2016-03-14-my-dog.html
@@ -6,14 +6,14 @@ date: 2010-03-15
 <style>
 
     body {
-       background-image: url(http://localhost:4000/images/dog_bone_background.jpg);
+       background-image: url(/images/dog_bone_background.jpg);
      }
 
 </style>
 
 <div>
-  <img class="main-img" id="ziba_ali" src="http://localhost:4000/images/ziba%20_ali.jpg" alt="Ziba_and_I ">
-  <img class = "main-img" id="ziba_gets_dirty" src="http://localhost:4000/images/ziba_gets_dirty.jpg" alt="Ziba_gets_dirty"><br>
+  <img class="main-img" id="ziba_ali" src="/images/ziba%20_ali.jpg" alt="Ziba_and_I ">
+  <img class = "main-img" id="ziba_gets_dirty" src="/images/ziba_gets_dirty.jpg" alt="Ziba_gets_dirty"><br>
 
   <h3><p id = "ziba">
 <strong>Loyal to the very end <br>
