--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   It all started in 1980 born in a revolution that we had to flee traveled to Italy
   From there we came to the USA were I've been raised. I grew up in California where I
     learned the values of Family and Friends who without them today I would not be the myth, the legend,
-    the man. <br><br> Checkout the links above to get to know about me. </p></h4>
+    the man. <br><br> Checkout the links above to get to know more about me. </p></h4>
 
 {% assign count = 0 %}
 <table>
