changed date for My Dog Ziba

--- a/static/legend.html
+++ b/static/legend.html
@@ -6,7 +6,7 @@ categories: Adventures
 tags: Family and friends
 ---
 
-<p>Legends are created! They're born</p>
+<p>Legends are not created! They're born</p>
 
 <p>From the beginning of time, man has wondered about the mysteries of the universe.
    I decided to challenge the universe and travel the world learning about new
