--- a/_posts/2016-03-15-daily_thought.html
+++ b/_posts/2016-03-15-daily_thought.html
@@ -1,8 +1,7 @@
 ---
-title: Daily Thought
+title: A Nation United?
 layout: post
 date: 2016-03-15
-categories: Daily Thoughts
 ---
 
       <div><img class="main-img" id="trapped_in_time" src="/images/ali_trap_in_time.JPG" alt="trapped in time">
