--- a/_posts/2016-03-21-who_am_i_not.html
+++ b/_posts/2016-03-21-who_am_i_not.html
@@ -11,21 +11,21 @@ date: 2016-03-21
   knowledge about is always a fun, frustrating and fearful feeling all at the same time.
   I decided to become a web developer after a tough few years of struggles within my
   previous industry. <br>
-  
-  I decided to attend Turing School of Software and Design!
+
+<p>I decided to attend Turing School of Software and Design!
   The school reputation of building developers with people that had absolutely  no
   programming experience. The most experience that I had was programming my car radio.
   I assumed that this school would be great! If they made people like me with such little
-  experiences into junior developers by the end of the program, then this was for me.<br>
+  experiences into junior developers by the end of the program, then this was for me.</p>
 
-  To my surprise on the first day of school, I met people both in my cohort(this is what
+<p>To my surprise on the first day of school, I met people both in my cohort(this is what
   the student class is called) and  out.  A lot of people had little to no experience just
   like myself, but then I would guess a good 20% of the students attending had a ton of
   experience, from a good will-hunting student(this guy is super smart) to a actual
   rocket scientist, and people with computer science educational backgrounds. Was this
-  truly the school that developed people with little to no skill into junior programmers?<br>
+  truly the school that developed people with little to no skill into junior programmers?</p>
 
-  Throughout the first module (schools version of semesters) I learned a great deal of code
+<p>Throughout the first module (schools version of semesters) I learned a great deal of code
   that I never knew. All of my projects scored in the top part of the class, yet I continuously
   struggled with myself confidence and felt that I wasn’t where I needed to be. Although I did
   great on all my assessments, the feeling of lost and lack of knowledge was still there.
@@ -35,21 +35,21 @@ date: 2016-03-21
   and I panic tremendously, feeling like I knew nothing, I choked on my final and failed miserably.
   Guess I truly am a failure. Later that night, depressed, worried, sadden and drunk I decided
   to retake my test again. To my surprise not only did I finish it, I got every question right
-  and all of the extra questions! <br>
+  and all of the extra questions! </p>
 
-  That’s when I realize I have impostor syndrome also known as fraud syndrome a term coined in
+<p>That’s when I realize I have impostor syndrome also known as fraud syndrome a term coined in
   1978 by clinical psychologists Dr. Pauline R. Clance and Suzanne A. Imes referring to
   high-achieving individuals marked by an inability to internalize their accomplishments and a
   persistent fear of being exposed as "fraud".[1] Despite external evidence of their competence,
   those exhibiting the syndrome remain convinced that they are frauds
   and do not deserve the success they have achieved. Proof of success is dismissed as luck, timing,
   or as a result of deceiving others into thinking they are more intelligent and competent than they
-  believe themselves to be. <br>
+  believe themselves to be. </p>
 
-  Once I understood what was going on with me, I have started
+<p>Once I understood what was going on with me, I have started
   to learn how to deal with it. Celebrating the little victories and taking to others who go
   through the same emotions that I do.  If you feel like you are struggling but everyone around
   you doesn’t think you are, your instructors or bosses praise your work, then you may have impostor
-  syndrome. <br>
+  syndrome. </p>
 </p>
 </div>
