--- a/_posts/2016-03-15-daily_thought.html
+++ b/_posts/2016-03-15-daily_thought.html
@@ -5,7 +5,7 @@ date: 2016-03-15
 ---
 
       <div><img class="main-img" id="trapped_in_time" src="/images/ali_trap_in_time.JPG" alt="trapped in time">
-  <h2> My daily thought!</h2>
+  <h2> A Nation United? </h2>
     <p>Have we gone back as a nation? As technology has developed, we see more and more crime, violence, and hatred
   on T.V and the web than ever before. What happen to us as a "Nation United". <br><br>
 The term "Nation United" is one of the most patriotic gestures of our country. When the world knows that
