--- a/_posts/2016-03-21-who_am_i_not.html
+++ b/_posts/2016-03-21-who_am_i_not.html
@@ -10,7 +10,7 @@ date: 2016-03-21
 <p>Learning something new, in which you have a lot of interested for , but lack any
   knowledge about is always a fun, frustrating and fearful feeling all at the same time.
   I decided to become a web developer after a tough few years of struggles within my
-  previous industry. <br>
+  previous industry. </p>
 
 <p>I decided to attend Turing School of Software and Design!
   The school reputation of building developers with people that had absolutely  no
@@ -51,5 +51,5 @@ date: 2016-03-21
   through the same emotions that I do.  If you feel like you are struggling but everyone around
   you doesn’t think you are, your instructors or bosses praise your work, then you may have impostor
   syndrome. </p>
-</p>
+
 </div>
